fixed z-index

--- a/assets/components/header.styl
+++ b/assets/components/header.styl
@@ -9,7 +9,7 @@ nav
   left: 0
 
 header
-  z-index: 1
+  z-index: 5
   background: black
   box-shadow: 0 2px 3px black(.2)
 
