--- a/assets/components/site-info.styl
+++ b/assets/components/site-info.styl
@@ -6,7 +6,7 @@
   position: fixed
   top: 0
   left: 0
-  z-index: 2
+  z-index: 10
   background: $grey-drk no-repeat 50% 50%
   background-size: cover
   text-align: center
